Fix like button alignment

--- a/src/scss/modules/_posts.scss
+++ b/src/scss/modules/_posts.scss
@@ -96,6 +96,10 @@
 			color: $iron;
 			transition: all $duration;
 
+			.like_button {
+				margin-top: 4px;
+			}
+
 			svg {
 				max-width: 20px;
 				fill: $iron;
